# cgshop2021-gitastrophe

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  gitconfig-om.txt  merge-tool-out.sh  mergetool-setup.sh
ideas/: initial-1-randompathandsat.txt  initial-2-a-star.txt  initial-3-timedagandgreedy.txt  initial-4-constraintsolverwithmissinginfo.txt  initial-5-preexistingml.txt  initial-6-localnetwork.txt
input/: algae_00000_20x20_40_160.in  algae_00001_20x20_75_278.in  algae_00002_50x50_40_720.in  algae_00003_50x50_40_969.in  algae_00004_50x50_50_1113.in  algae_00005_50x50_75_1875.in  algae_00006_100x100_40_4000.in  algae_00007_100x100_40_4000.in  algae_00008_100x100_50_5000.in  algae_00009_100x100_75_7311.in  buffalo_000_25x25_20_63.in  buffalo_001_25x25_40_174.in  buffalo_002_60x60_20_702.in  buffalo_003_40x40_60_776.in  buffalo_004_60x60_40_1404.in  buffalo_free_000_25x25_20_125.in  buffalo_free_001_25x25_40_250.in  buffalo_free_002_60x60_20_720.in  buffalo_free_003_60x60_40_1440.in  buffalo_free_004_60x60_60_2160.in  clouds_00000_20x20_40_160.in  clouds_00001_50x50_40_912.in  clouds_00002_50x50_40_963.in  clouds_00003_50x50_40_1000.in  clouds_00004_50x50_75_1745.in  clouds_00005_50x50_75_1875.in  clouds_00006_100x100_25_2374.in  clouds_00007_100x100_40_4000.in  clouds_00008_100x100_50_5000.in  clouds_00009_100x100_75_7229.in  election_109.in  galaxy_cluster2_00000_20x20_20_80.in  galaxy_cluster2_00001_20x20_50_200.in  galaxy_cluster2_00002_20x20_75_251.in  galaxy_cluster2_00003_50x50_25_625.in  galaxy_cluster2_00004_50x50_30_679.in  galaxy_cluster2_00005_50x50_50_860.in  galaxy_cluster2_00006_100x100_20_2000.in  galaxy_cluster2_00007_100x100_30_2878.in  galaxy_cluster2_00008_100x100_30_3000.in  (+167 more)
src/: Instance.h  alternating_run.cpp  cbs.h  cbs_improve.h  cbs_improve_run.cpp  cbs_run.cpp  cont_run.cpp  convert.cpp  convert_back.cpp  convert_back_back.cpp  debug.out  fast_direct_feasibility.h  fast_feasibility.h  fast_inner_feasibility.h  feasibility_solver.h  ff.cpp  fff.cpp  ffff.cpp  graph.h  greedy_improve.h  greedy_opt_with_random.h  intermediate_scoring.cpp  its_all_a_simulation.h  k_perm_run.cpp  k_perm_run_alt.cpp  k_perm_solver.h  k_perm_solver_alt.h  matching.h  new_ilp_solver.cpp  optimize.cpp  parallel_both.cpp  parallel_fff.cpp  parallel_greedy_improve.cpp  parallel_init.cpp  parallel_k_opt.cpp  parallel_two_opt.cpp  parse2.py  physics_solver.h  slowdown_random_test_run.cpp  sorted_set.h  (+11 more)
src/format/: basic.py
src/ilp_solver/: model.h  solver.cpp
src/vis/: col.h  frame.h  framedata.h  gif.h  gif_vis.cpp  vis.cpp  window.h
