cmake_minimum_required(VERSION 3.5)

project(cgshop2021)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED true)

set(SRC ${CMAKE_SOURCE_DIR}/src)
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
include_directories("${SRC}")
set(CMAKE_CXX_FLAGS "-Wall -pthread -g -O3 -funroll-loops")

set(JSON_BuildTests OFF CACHE INTERNAL "")
add_subdirectory(json)

find_package(Threads)
find_package(X11)

#add_library(sl SHARED IMPORTED)

add_executable(convert ${SRC}/convert.cpp)
add_executable(convert_back ${SRC}/convert_back.cpp)
add_executable(convert_back_back  ${SRC}/convert_back_back.cpp)
add_executable(cont_run  ${SRC}/cont_run.cpp)
add_executable(slowdown_random_test_run ${SRC}/slowdown_random_test_run.cpp)
add_executable(test_run ${SRC}/test_run.cpp)
add_executable(ff ${SRC}/ff.cpp)
add_executable(fff ${SRC}/fff.cpp)
add_executable(vis ${SRC}/vis/vis.cpp)
add_executable(verify_and_score ${SRC}/verify_and_score.cpp)
add_executable(cbs_run ${SRC}/cbs_run.cpp)
add_executable(gif_vis ${SRC}/vis/gif_vis.cpp)
add_executable(parallel_greedy_improve ${SRC}/parallel_greedy_improve.cpp)
add_executable(two_opt_run ${SRC}/two_opt_run.cpp)
add_executable(two_perm_run ${SRC}/two_perm_run.cpp)
add_executable(k_perm_run ${SRC}/k_perm_run.cpp)
add_executable(k_perm_run_alt ${SRC}/k_perm_run_alt.cpp)
add_executable(intermediate_scoring ${SRC}/intermediate_scoring.cpp)
add_executable(try_save ${SRC}/try_save.cpp)
add_executable(alternating_run ${SRC}/alternating_run.cpp)
add_executable(parallel_two_opt ${SRC}/parallel_two_opt.cpp)
add_executable(parallel_both ${SRC}/parallel_both.cpp)
add_executable(parallel_init ${SRC}/parallel_init.cpp)
add_executable(parallel_fff ${SRC}/parallel_fff.cpp)
add_executable(parallel_k_opt ${SRC}/parallel_k_opt.cpp)
add_executable(cbs_improve_run ${SRC}/cbs_improve_run.cpp)

target_link_libraries(convert PRIVATE nlohmann_json::nlohmann_json stdc++fs)
target_link_libraries(convert_back PRIVATE nlohmann_json::nlohmann_json stdc++fs)
target_link_libraries(convert_back_back PRIVATE nlohmann_json::nlohmann_json stdc++fs)
